--- a/themes/revise/layouts/_default/baseof.html
+++ b/themes/revise/layouts/_default/baseof.html
@@ -22,12 +22,12 @@
 
 
 
-<body class="blog-listing">
+<body>
 <header>
   <nav id="navbar" class="navbar">
     <div class="nav-container">
       <div class="logo">
-        <a href="index.html" class="logo-link">
+        <a href="/" class="logo-link">
           <h1>JN</h1>
         </a>
       </div>
