--- a/themes/revise/layouts/_default/single.html
+++ b/themes/revise/layouts/_default/single.html
@@ -1,10 +1,20 @@
 {{ define "main" }}
-  <h1>{{ .Title }}</h1>
+  <div class="single-post-container">
+    <article>
+      <header class="post-header">
+        <h1 class="post-title">
+          {{ .Title }}
+        </h1>
+        <div class="post-meta">
+          {{ $dateHuman := .Date | time.Format ":date_long" }}
+          Posted on {{ $dateHuman }}
+        </div>
+      </header>
 
-  {{ $dateMachine := .Date | time.Format "2006-01-02T15:04:05-07:00" }}
-  {{ $dateHuman := .Date | time.Format ":date_long" }}
-  <time datetime="{{ $dateMachine }}">{{ $dateHuman }}</time>
-
-  {{ .Content }}
-  {{ partial "terms.html" (dict "taxonomy" "tags" "page" .) }}
+      <div class="post-content">
+        {{ .Content }}
+      </div>
+    </article>
+  </div>
 {{ end }}
+
