--- a/themes/revise/layouts/_default/single.html
+++ b/themes/revise/layouts/_default/single.html
@@ -1,3 +1,15 @@
+{{ define "css" }}
+  <link
+          href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/themes/prism-tomorrow.min.css"
+          rel="stylesheet"/>
+{{ end }}
+
+{{ define "js" }}
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/components/prism-core.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/plugins/autoloader/prism-autoloader.min.js"></script>
+{{ end }}
+
+
 {{ define "main" }}
   <div class="single-post-container">
     <article>
@@ -7,7 +19,7 @@
         </h1>
         <div class="post-meta">
           {{ $dateHuman := .Date | time.Format ":date_long" }}
-          Posted on {{ $dateHuman }}
+          {{ $dateHuman }}
         </div>
       </header>
 
