--- a/themes/revise/layouts/_default/list.html
+++ b/themes/revise/layouts/_default/list.html
@@ -1,8 +1,28 @@
 {{ define "main" }}
-  <h1>{{ .Title }}</h1>
-  {{ .Content }}
-  {{ range .Pages }}
-    <h2><a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></h2>
-    {{ .Summary }}
-  {{ end }}
+
+  <div class="blog-layout">
+
+    <div class="blog-posts-list">
+      {{ range .Pages }}
+        <div class="post-card">
+          <a href="{{ .RelPermalink }}" class="post-link">
+            <h2>{{ .LinkTitle }}</h2>
+            <div class="post-meta">Posted on January 15, 2024</div>
+            <div class="post-excerpt">
+              <p>
+                {{ .Summary }}
+              </p>
+            </div>
+          </a>
+        </div>
+      {{ end }}
+    </div>
+
+    {{ partial "sidebar.html" . }}
+
+  </div>
+
 {{ end }}
+
+
+
