--- a/themes/revise/layouts/_default/list.html
+++ b/themes/revise/layouts/_default/list.html
@@ -7,7 +7,7 @@
         <div class="post-card">
           <a href="{{ .RelPermalink }}" class="post-link">
             <h2>{{ .LinkTitle }}</h2>
-            <div class="post-meta">Posted on January 15, 2024</div>
+            <div class="post-meta">{{ .Date.Format "January 2, 2006" }}</div>
             <div class="post-excerpt">
               <p>
                 {{ .Summary }}
