--- a/themes/revise/layouts/partials/sidebar.html
+++ b/themes/revise/layouts/partials/sidebar.html
@@ -1,56 +1,81 @@
 <aside class="sidebar">
     <div class="profile-card">
-        {{ $profileImage := resources.Get "img/siteProfileImage.jpeg" }}
-        <img src="{{ $profileImage.Permalink }}" alt="Profile" />
-        <h3>Julkar Naim</h3>
-        <p>Software Engineer</p>
-        <p>
-            at
-            <a
-                    href="https://brainstation-23.com"
+        {{ if .Site.Params.profileImage }}
+            {{ with resources.Get .Site.Params.profileImage }}
+                <img src="{{ .RelPermalink }}" alt="Profile" />
+            {{ end }}
+        {{ else }}
+            <img src="" alt="Profile" />
+        {{ end }}
+
+        {{ if .Site.Params.owner }}
+            <h3>{{ .Site.Params.owner }}</h3>
+        {{ end }}
+
+        {{ if .Site.Params.designation }}
+            <p>{{ .Site.Params.designation }}</p>
+        {{ end }}
+
+        {{ if and .Site.Params.companyName .Site.Params.companyURL }}
+            <p>
+                at
+                <a
+                    href="{{ .Site.Params.companyURL }}"
                     target="_blank"
                     rel="noopener noreferrer"
-            >
-                Brain Station 23 PLC
-            </a>
-        </p>
+                >
+                    {{ .Site.Params.companyName }}
+                </a>
+            </p>
+        {{ end }}
+
+
         <div class="social-links">
-            <a
-                    href="https://linkedin.com/in/your-profile"
+            {{ if .Site.Params.linkedin }}
+                <a
+                    href="https://linkedin.com/in/{{ .Site.Params.linkedin }}"
                     target="_blank"
                     rel="noopener noreferrer"
                     class="social-link"
-            >
-                <i class="fab fa-linkedin"></i>
-            </a>
-            <a
-                    href="https://github.com/your-username"
+                >
+                    <i class="fab fa-linkedin"></i>
+                </a>
+            {{ end }}
+            {{ if .Site.Params.github }}
+                <a
+                    href="https://github.com/{{ .Site.Params.github }}"
                     target="_blank"
                     rel="noopener noreferrer"
                     class="social-link"
-            >
-                <i class="fab fa-github"></i>
-            </a>
-            <a
-                    href="https://leetcode.com/your-username"
+                >
+                    <i class="fab fa-github"></i>
+                </a>
+            {{ end }}
+            {{ if .Site.Params.leetcode }}
+                <a
+                    href="https://leetcode.com/{{ .Site.Params.leetcode }}"
                     target="_blank"
                     rel="noopener noreferrer"
                     class="social-link"
-            >
-                <i class="fas fa-code"></i>
-            </a>
+                >
+                    <i class="fas fa-code"></i>
+                </a>
+            {{ end }}
         </div>
     </div>
-
 
     <div class="categories-card">
         <h3>Categories</h3>
         <ul>
             {{ range $categoryName, $category := .Site.Taxonomies.categories }}
                 <li>
-                    <a href="{{ $category.Page.RelPermalink }}" class="category-link">{{ $categoryName | title }}</a>
+                    <a
+                        href="{{ $category.Page.RelPermalink }}"
+                        class="category-link"
+                        >{{ $categoryName | title }}</a
+                    >
                 </li>
-            {{end}}
+            {{ end }}
         </ul>
     </div>
 
@@ -58,8 +83,10 @@
         <h3>Tags</h3>
         <div class="tag-list">
             {{ range $tagName, $tag := .Site.Taxonomies.tags }}
-                <a href="{{ $tag.Page.RelPermalink }}" class="tag">{{ $tagName }}</a>
-            {{end}}
+                <a href="{{ $tag.Page.RelPermalink }}" class="tag"
+                    >{{ $tagName }}</a
+                >
+            {{ end }}
         </div>
     </div>
 </aside>
