Added Google Analytics

--- a/themes/revise/layouts/_default/baseof.html
+++ b/themes/revise/layouts/_default/baseof.html
@@ -29,6 +29,7 @@
             type="text/javascript"
             defer
         ></script>
+        {{ template "_internal/google_analytics.html" . }}
     </head>
 
     <body>
